@@ -1,4 +1,5 @@
 UNRELEASED
+  * fix sprint_tm buffer size crash (reported by Japheth Cleaver)
   * fping.spec: fix setuid permissions and provides fping6 (Marcus Vinicius Ferreira)
   * fix fping6 build on OS X 10.8 (unknown contributor)
 
